Added support for OpenVR controllers

BUG=712987

Review-Url: https://codereview.chromium.org/2825203004
Cr-Commit-Position: refs/heads/master@{#466890}

Former-commit-id: e5ad8bea23087577eefde576a499e2295a9a6e73